[package]
name = "door-lock"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
libreauth = "0.11.0"
rocket = {version = "0.4.2", default-features = false}
rocket_contrib = {version="0.4.2", features=["handlebars_templates"]}
