[package]
name = "door-lock"
version = "0.1.0"
authors = ["Shogo Takata <pineapplehunter.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rppal = "0.14.1"
libreauth = "0.15.0"
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
handlebars = "4.3.6"
async-trait = "0.1.66"
serde = { version = "1.0.154", features = ["derive"] }

[features]
default = ["motor"]
motor = []
